--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
 # hiding all input data and prompts, per the advent of code guidelines
-*/day-*/example.txt
-*/day-*/input.txt
+*/day-*/*.txt
 */day-*/README.md
